--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,18 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^4.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
